styles/globals.css
/* ... */
.downloadGradient {
  position: absolute;
  top: 0;
  height: 22vh;
  width: 100vw;
  z-index: 2;
  background: linear-gradient(270deg, #ffffff 0%, rgba(255, 255, 255, 0) 50%),
    linear-gradient(90deg, #ffffff -0.55%, rgba(255, 255, 255, 0) 50%),
    linear-gradient(180deg, #a98cff 0%, rgba(255, 255, 255, 0) 100%);
}

.appIcon {
  background: rgba(145, 107, 255, 0.25);
  backdrop-filter: blur(8px);
  border-radius: 28px;
  width: 112px;
  height: 112px;
  z-index: 4;
  margin-top: 1.3em;
  margin-bottom: 1.3em;
}

.appIcon > div {
  padding: 9px;
}

.downloadHeroText {
  margin-bottom: 0.3em;

  font-family: "Manrope";
  font-style: normal;
  font-weight: 700;
  font-size: 4.5vw;
  text-align: center;
  letter-spacing: -0.04em;
  color: #454267;
  z-index: 2;
}

.downloadDescription {
  font-family: "Manrope";
  font-style: normal;
  font-weight: 600;
  font-size: 2vw;
  text-align: center;
  letter-spacing: -0.04em;
  color: #454267;
  z-index: 2;
}

.downloadStoreContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.5vw;
  margin-top: 2em;
  z-index: 2;
}

.footer {
  position: absolute;
  bottom: 0;
  display: flex;
  flex-direction: column;
  width: 90vw;

  font-weight: 600;
  font-size: 14px;
  line-height: 18px;
  letter-spacing: -0.02em;
  color: #454267;
}

.contacts {
  display: flex;
  width: 100%;
  height: 50px;
  justify-content: space-between;
  align-items: center;
}

.emailContainer {
  display: flex;
  gap: 0.3em;
}

.socialContainer {
  display: flex;
  gap: 1.5em;
}

.bottomFooter {
  display: flex;
  align-items: center;
  height: 50px;
  width: 100%;
  justify-content: space-between;

  font-weight: 500;
  font-size: 13px;
  line-height: 18px;
  letter-spacing: -0.02em;
  color: #45426770;
}

.footerBorder {
  height: 1px;
  background: linear-gradient(
    90deg,
    #e0dde8 0%,
    rgba(210, 197, 255, 0) 50%,
    #e0dde8 100%
  );
}

.copyrightContainer {
  display: flex;
  align-items: center;
  gap: 0.3em;
  color: #45426770;
}

.links {
  display: flex;
  gap: 1.5em;
}

.links > a {
  color: inherit;
  text-decoration: none;
}

.footerQRContainer {
  position: absolute;
  left: 50%;
  bottom: 12px;
  transform: translate(-50%, 0);
  display: flex;
  flex-direction: column;
  gap: 0.5em;
  z-index: 2;

  font-weight: 600;
  font-size: 14px;
  line-height: 19px;
  text-align: center;
  letter-spacing: -0.02em;
  color: #454267;
}

.copyrightLogo {
  filter: brightness(2.5) grayscale(1);
}

.curvedLine {
  position: absolute;
  bottom: 15%;
  width: 100%;
  aspect-ratio: 1;
  background: linear-gradient(90deg, #ffffff 30%, #e7dfff 50%, #ffffff 70%);
  border-radius: 0 0 50% 50%;
  transform: scaleX(2);
  z-index: 0;
}

.curvedOverlap {
  position: absolute;
  z-index: 1;
  bottom: calc(15% + 3px);
  width: 100%;
  aspect-ratio: 1;
  background: #ffffff;
  border-radius: 0 0 50% 50%;
  transform: scaleX(2);
}

.backgroundCircleContainer {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100vw;
  height: 30vh;
  display: flex;
  justify-content: center;
  gap: 30vw;
}

.backgroundCirclePurple {
  height: 100%;
  aspect-ratio: 1;
  background: #8a69ee;
  opacity: 0.3;
  filter: blur(120px);
  border-radius: 50%;
  backface-visibility: hidden;
  transform: translate3d(0, 0, 0);
}

.backgroundCircleTeal {
  height: 100%;
  aspect-ratio: 1;
  background: #3f6fb0;
  opacity: 0.3;
  filter: blur(120px);
  border-radius: 50%;
  backface-visibility: hidden;
  transform: translate3d(0, 0, 0);
}

.backgroundCircleTeal:first-child {
  margin-top: -5%;
}

.backgroundCircleTeal:last-child {
  margin-top: 5%;
}

.backgroundCirclePink {
  height: 100%;
  aspect-ratio: 1;
  background: #9f4fcd;
  opacity: 0.3;
  filter: blur(120px);
  border-radius: 50%;
  backface-visibility: hidden;
  transform: translate3d(0, 0, 0);
}

.backgroundCirclePink:first-child {
  margin-top: 5%;
}

.backgroundCirclePink:last-child {
  margin-top: -5%;
}

/* GUIDES BUTTON GROUP */
.btn-group {
  background-color: rgba(118, 118, 128, 0.24);
  border-radius: 50px;
  height: 4vh;
  margin-top: 1em;
}
.btn-group button {
  background-color: transparent;
  border: none;
  color: #ffffff;
  cursor: pointer;
  float: left;
  width: 10em;
  border-radius: 50px;
  padding: 1vh;
}

.btn-group button:not(:last-child) {
  border-right: none; /* Prevent double borders */
}

/* Clear floats (clearfix hack) */
.btn-group:after {
  content: "";
  clear: both;
  display: table;
}

/* Add a background color on hover */
.btn-group button:hover {
  background-color: #464649;
}

.btn-group button.btn-active {
  background-color: #59537b;
}

.iphoneFrame {
  width: 100%;
  height: 100%;
  padding: 0 0.5em;
  background: url("/assets/iphone-frame.svg");
  background-repeat: no-repeat;
  background-size: contain;
}

.descriptionContent {
  width: 85%;
  height: 100%;
  color: #aba6d6;
  padding: 0 3em;
}

.descriptionContent > h3 {
  font-weight: 800;
  font-size: 1.6em;
  letter-spacing: -0.02em;
}

.descriptionContent__textContainer {
  padding: 16px 24px;
  background: rgba(163, 94, 255, 0.05);
  border-radius: 20px;
  font-weight: 500;
  font-size: 1em;
  line-height: 200%;
  letter-spacing: -0.02em;
}

.descriptionContent__textContainer > ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.descriptionContent__footer {
  filter: brightness(0.6);
  display: flex;
  justify-content: flex-end;
  gap: 1em;
  margin-top: 0.5em;
}

.timelineContent {
  display: flex;
  justify-content: center;
  padding: 3em;
}

.timelineContent__image {
  width: 50%;
}

.timelineContent__text {
  width: 100%;
  font-weight: 600;
  font-size: 1em;
  line-height: 200%;
  letter-spacing: -0.02em;
  color: #aba6d6;
  padding-left: 3em;
}

.statsContent {
  width: 85%;
  height: 100%;
  padding: 1em 4em;
}

